--- a/src/app/inicio/inicio.component.scss
+++ b/src/app/inicio/inicio.component.scss
@@ -1,5 +1,39 @@
+html {
+    height:100%;
+}
+
+body {
+    height: inherit;
+    margin: 0;
+}
+
+header {
+    background-color: #85C1E9;
+    font-size: 20px;
+}
+
+h1{
+    margin: 10px;
+}
+
+form.forms{
+    text-align: center;
+}
+
+
 ul{
     list-style-type: none;
     text-align: center;
-    margin-top: 10%;
+}
+
+ul li{
+    margin: 10px;
+}
+
+ul#foot{
+    list-style: none;
+    text-align: center;
+    display: inline-block;
+    background-color:#85C1E9;
+    width: 100%;
 }
