--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -33,45 +33,125 @@
 </form>
 
 <!-- formulario para el reclamo -->
+<body>
+    <form [formGroup]="formularioReclamo" (ngSubmit)="agregar()" class="forms" novalidate>
+        <h2>Formulario de Reclamo</h2>
+        <ul id="forms2">
+            <li>
+                <label for="asunto">Asunto</label>
+                <input formControlName="asunto" type="text">
+            </li>
+            <li>
+                <label for="descripcion">Descripcion</label>
+                <textarea formControlName="descripcion" name="descripcion" cols="30" rows="10"></textarea>
+            </li>
+            <li>
+                <label for="categorias">Categoria</label>
+                <select formControlName="categorias">
+                    <option selected value=""></option>
+                    <option id="solicitudGenerica" value="generica">generica</option>
+                    <option id="solicitudCambio" value="cambio">Solicitud de Cambio</option>
+                    <option id="incidente" value="incidente">Incidente</option>
+                    <option id="problema" value="problema">Problema</option>
+                    <option id="solicitudHardware" value="hardware">Solicitud de Hardware</option>
+                    <option id="solicitudSoftware" value="software">Solicitud de Software Nuevo</option>
+                </select>
+            </li>
+            <li>
+                <label for="prioridad">Prioridad</label>
+                <select formControlName="prioridades">
+                    <option selected="selected" value=""></option>
+                    <option id="alta" value="alta">Alta</option>
+                    <option id="media" value="media">Media</option>
+                    <option id="baja" value="baja">Baja</option>
+                </select>
+            </li>
+            <li>
+                <button type="submit">Enviar</button>
+            </li>
+        </ul>
 
-<form [formGroup]="formularioReclamo" (ngSubmit)="agregar()" class="forms">
-    <h2>Formulario de Reclamo</h2>
-    <ul id="forms2">
-        <li>
-            <label for="asunto">Asunto</label>
-            <input formControlName="asunto" type="text">
-        </li>
-        <li>
-            <label for="descripcion">Descripcion</label>
-            <textarea formControlName="descripcion" name="descripcion" cols="30" rows="10"></textarea>
-        </li>
-        <li>
-            <label for="categoria">Categoria</label>
-            <select formControlName="categorias">
-                <option selected value=""></option>
-                <option formControlName="solicitudGenerica" value="generica">Solicitud Generica</option>
-                <option formControlName="solicitudCambio" value="cambio">Solicitud de Cambio</option>
-                <option formControlName="incidente" value="incidente">Incidente</option>
-                <option formControlName="problema" value="problema">Problema</option>
-                <option formControlName="solicitudHardware" value="hardware">Solicitud de Hardware</option>
-                <option formControlName="solicitudSoftware" value="software">Solicitud de Software Nuevo</option>
-            </select>
-        </li>
-        <li>
-            <label for="prioridad">Prioridad</label>
-            <select formControlName="prioridades">
-                <option selected="selected" value=""></option>
-                <option formControlName="prAlta" value="alta">Alta</option>
-                <option formControlName="prMedia" value="media">Media</option>
-                <option formControlName="prBaja" value="baja">Baja</option>
-            </select>
-        </li>
-        <li>
-            <button type="submit">Enviar</button>
-        </li>
-    </ul>
+<!-- Listas de los reportes de solicitudes genericas -->
+        <ul class="lists">
+            Genericas
+            <ul class="prAlta">
+                <li *ngFor="let item of listaGenericaAlta">{{item}}</li>
+            </ul> 
+            <ul class="prMedia">
+                <li *ngFor="let item of listaGenericaMedia">{{item}}</li>
+            </ul>
+            <ul class="prBaja">
+                <li *ngFor="let item of listaGenericaBaja">{{item}}</li>
+            </ul>
+        </ul>
+<!-- Listas de los reportes de solicitudes de cambio -->
+        <ul class="lists">
+            Cambio
+            <ul class="prAlta">
+                <li *ngFor="let item of listaCambioAlta">{{item}}</li>
+            </ul> 
+            <ul class="prMedia">
+                <li *ngFor="let item of listaCambioMedia">{{item}}</li>
+            </ul>
+            <ul class="prBaja">
+                <li *ngFor="let item of listaCambioBaja">{{item}}</li>
+            </ul>
+        </ul>
+<!-- Listas de los reportes de incidentes -->
+        <ul class="lists">
+            Incidentes
+            <ul class="prAlta">
+                <li *ngFor="let item of listaIncidenteAlta">{{item}}</li>
+            </ul> 
+            <ul class="prMedia">
+                <li *ngFor="let item of listaIncidenteMedia">{{item}}</li>
+            </ul>
+            <ul class="prBaja">
+                <li *ngFor="let item of listaIncidenteBaja">{{item}}</li>
+            </ul>
+        </ul>
+<!-- Listas de los reportes de problemas -->
+        <ul class="lists">
+            Problemas
+            <ul class="prAlta">
+                <li *ngFor="let item of listaProblemaAlta">{{item}}</li>
+            </ul> 
+            <ul class="prMedia">
+                <li *ngFor="let item of listaProblemaMedia">{{item}}</li>
+            </ul>
+            <ul class="prBaja">
+                <li *ngFor="let item of listaProblemaBaja">{{item}}</li>
+            </ul>
+        </ul>
+<!-- Listas de los reportes de solicitudes de hardware -->
+        <ul class="lists">
+            Hardware
+            <ul class="prAlta">
+                <li *ngFor="let item of listaHardwareAlta">{{item}}</li>
+            </ul> 
+            <ul class="prMedia">
+                <li *ngFor="let item of listaHardwareMedia">{{item}}</li>
+            </ul>
+            <ul class="prBaja">
+                <li *ngFor="let item of listaHardwareBaja">{{item}}</li>
+            </ul>
+        </ul>
+<!-- Listas de los reportes de solicitudes de cambio de software -->
+        <ul class="lists">
+            Software
+            <ul class="prAlta">
+                <li *ngFor="let item of listaSoftwareAlta">{{item}}</li>
+            </ul> 
+            <ul class="prMedia">
+                <li *ngFor="let item of listaSoftwareMedia">{{item}}</li>
+            </ul>
+            <ul class="prBaja">
+                <li *ngFor="let item of listaSoftwareBaja">{{item}}</li>
+            </ul>
+        </ul>
 
-</form>
+    </form>
+</body>
 
 <footer>
     <ul id="foot">
