--- a/src/app/inicio/inicio.component.scss
+++ b/src/app/inicio/inicio.component.scss
@@ -37,3 +37,25 @@ ul#foot{
     background-color:#85C1E9;
     width: 100%;
 }
+
+ul.lists{
+    text-align: left;
+}
+
+ul.prAlta{
+    text-align: left;
+    display: flex;
+    background-color: red;
+}
+
+ul.prMedia{
+    text-align: left;
+    display: flex;
+    background-color: yellow;
+}
+
+ul.prBaja{
+    text-align: left;
+    display: flex;
+    background-color: green;
+}
