--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,162 +1,170 @@
-<head>
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-</head>
-
-<header>
-    <h1>Foro de Reclamos</h1>
-    
-</header>
-
-<!-- formulario para el inicio de sesion -->
-
-<form [formGroup]="formularioInicio" class="forms" action="?" method="POST">
-    <h2>Formulario de Ingreso</h2>
-    <ul id="forms1">
-        <li>
-            <label for="usuario">Usuario</label>
-            <input formControlName="usuario" type="text" name="usuario" id="usuario">
-        </li>
-
-        <li>
-            <label for="contraseña">Contraseña</label>
-            <input formControlName="contraseña" type="password" id="contraseña">
-        </li>
-
-        <li>
-            <div class="g-recaptcha" data-sitekey="6LcHzwYbAAAAAEu7Fw4SBCqrpcNtasoJxutWcoeX"></div>
-        </li>
-
-        <li>
-            <button type="submit">Iniciar</button>
-        </li>
-    </ul>
-</form>
-
-<!-- formulario para el reclamo -->
-<body>
-    <form [formGroup]="formularioReclamo" (ngSubmit)="agregar()" class="forms" novalidate>
-        <h2>Formulario de Reclamo</h2>
-        <ul id="forms2">
-            <li>
-                <label for="asunto">Asunto</label>
-                <input formControlName="asunto" type="text">
-            </li>
-            <li>
-                <label for="descripcion">Descripcion</label>
-                <textarea formControlName="descripcion" name="descripcion" cols="30" rows="10"></textarea>
-            </li>
-            <li>
-                <label for="categorias">Categoria</label>
-                <select formControlName="categorias">
-                    <option selected value=""></option>
-                    <option id="solicitudGenerica" value="generica">generica</option>
-                    <option id="solicitudCambio" value="cambio">Solicitud de Cambio</option>
-                    <option id="incidente" value="incidente">Incidente</option>
-                    <option id="problema" value="problema">Problema</option>
-                    <option id="solicitudHardware" value="hardware">Solicitud de Hardware</option>
-                    <option id="solicitudSoftware" value="software">Solicitud de Software Nuevo</option>
-                </select>
-            </li>
-            <li>
-                <label for="prioridad">Prioridad</label>
-                <select formControlName="prioridades">
-                    <option selected="selected" value=""></option>
-                    <option id="alta" value="alta">Alta</option>
-                    <option id="media" value="media">Media</option>
-                    <option id="baja" value="baja">Baja</option>
-                </select>
-            </li>
-            <li>
-                <button type="submit">Enviar</button>
-            </li>
-        </ul>
-
-<!-- Listas de los reportes de solicitudes genericas -->
-        <ul class="lists">
-            Genericas
-            <ul class="prAlta">
-                <li *ngFor="let item of listaGenericaAlta">{{item}}</li>
-            </ul> 
-            <ul class="prMedia">
-                <li *ngFor="let item of listaGenericaMedia">{{item}}</li>
+    <head>
+        <title>Foro de Reclamos</title>
+        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    </head>
+        <div class="container">
+            <div class="row">
+                <h1>Foro de Reclamos</h1>
+            </div>
+            <div class="row">
+                <!-- formulario para el inicio de sesion -->
+                <form [formGroup]="formularioInicio" class="forms" action="?" method="POST">
+                    <h2>Formulario de Ingreso</h2>
+                    <ul id="forms1">
+                        <li>
+                            <label class="form-label" for="usuario">Usuario</label>
+                            <input class="form-control" formControlName="usuario" type="text" name="usuario" id="usuario">
+                        </li>
+                    
+                        <li>
+                            <label class="form-label" for="contraseña">Contraseña</label>
+                            <input class="form-control" formControlName="contraseña" type="password" id="contraseña">
+                        </li>
+                    
+                        <li>
+                            <div class="g-recaptcha" data-sitekey="6LcHzwYbAAAAAEu7Fw4SBCqrpcNtasoJxutWcoeX"></div>
+                        </li>
+                    
+                        <li>
+                            <button class="btn btn-danger" type="submit">Iniciar</button>
+                        </li>
+                    </ul>
+                </form>
+            </div>
+            
+            <div class="row">
+            <!-- formulario para el reclamo -->
+                <form [formGroup]="formularioReclamo" (ngSubmit)="agregar()" class="forms" novalidate>
+                    <h2>Formulario de Reclamo</h2>
+                        <div class="form-floating">
+                            
+                            <input class="form-control" id="asunto" formControlName="asunto" type="text">
+                            <label class="form-label"  for="asunto">Asunto</label>
+                        </div>
+                        <div class="form-floating">
+                            
+                            <textarea class="form-control" id="descripcion" formControlName="descripcion" name="descripcion"  rows="20"></textarea>
+                            <label class="form-label" for="descripcion">Descripcion</label>
+                        </div>
+                        <div class="form-floating">
+                            
+                            <select class="form-select" id="categoria" aria-label="Categoría" formControlName="categorias">
+                                <option selected value="">Seleccionar...</option>
+                                <option id="solicitudGenerica" value="generica">Solicitud Generica</option>
+                                <option id="solicitudCambio" value="cambio">Solicitud de Cambio</option>
+                                <option id="incidente" value="incidente">Incidente</option>
+                                <option id="problema" value="problema">Problema</option>
+                                <option id="solicitudHardware" value="hardware">Solicitud de Hardware</option>
+                                <option id="solicitudSoftware" value="software">Solicitud de Software Nuevo</option>
+                            </select>
+                            <label class="form-label" for="categoria">Categoría</label>
+                        </div>
+                        <div class="row row-cols-lg-auto">
+                            <div class="form-floating">
+                            <select class="form-select" id="prioridad" aria-label="Prioridad" formControlName="prioridades">
+                                <option selected="selected" value=""></option>
+                                <option id="alta" value="alta">Alta</option>
+                                <option id="media" value="media">Media</option>
+                                <option id="baja" value="baja">Baja</option>
+                            </select>
+                            <label class="form-label" for="prioridad">Prioridad</label>
+                        </div>
+                    </div>
+                    <div class="row row-cols-lg-auto">
+                        <div>
+                            <button class="btn btn-primary" type="submit">Enviar</button> &nbsp;
+                            <button class="btn btn-secondary" type="reset">Limpiar</button>
+                        </div>
+                    </div>
+                       <!-- Listas de los reportes de solicitudes genericas -->
+                    <ul class="lists">
+                        Genericas
+                        <ul class="prAlta">
+                            <li class="A" *ngFor="let item of listaGenericaAlta">{{item}}</li>
+                        </ul> 
+                        <ul class="prMedia">
+                            <li class="B" *ngFor="let item of listaGenericaMedia">{{item}}</li>
+                        </ul>
+                        <ul class="prBaja">
+                            <li class="C" *ngFor="let item of listaGenericaBaja">{{item}}</li>
+                        </ul>
+                    </ul>
+                    <!-- Listas de los reportes de solicitudes de cambio -->
+                    <ul class="lists">
+                        Cambio
+                        <ul class="prAlta">
+                            <li class="A" *ngFor="let item of listaCambioAlta">{{item}}</li>
+                        </ul> 
+                        <ul class="prMedia">
+                            <li class="B" *ngFor="let item of listaCambioMedia">{{item}}</li>
+                        </ul>
+                        <ul class="prBaja">
+                            <li class="C" *ngFor="let item of listaCambioBaja">{{item}}</li>
+                        </ul>
+                    </ul>
+                    <!-- Listas de los reportes de incidentes -->
+                    <ul class="lists">
+                        Incidentes
+                        <ul class="prAlta">
+                            <li class="A" *ngFor="let item of listaIncidenteAlta">{{item}}</li>
+                        </ul> 
+                        <ul class="prMedia">
+                            <li class="B" *ngFor="let item of listaIncidenteMedia">{{item}}</li>
+                        </ul>
+                        <ul class="prBaja">
+                            <li class="C" *ngFor="let item of listaIncidenteBaja">{{item}}</li>
+                        </ul>
+                    </ul>
+                    <!-- Listas de los reportes de problemas -->
+                    <ul class="lists">
+                        Problemas
+                        <ul class="prAlta">
+                            <li class="A" *ngFor="let item of listaProblemaAlta">{{item}}</li>
+                        </ul> 
+                        <ul class="prMedia">
+                            <li class="B" *ngFor="let item of listaProblemaMedia">{{item}}</li>
+                        </ul>
+                        <ul class="prBaja">
+                            <li class="C" *ngFor="let item of listaProblemaBaja">{{item}}</li>
+                        </ul>
+                    </ul>
+                    <!-- Listas de los reportes de solicitudes de hardware -->
+                    <ul class="lists">
+                        Hardware
+                        <ul class="prAlta">
+                            <li class="A" *ngFor="let item of listaHardwareAlta">{{item}}</li>
+                        </ul> 
+                        <ul class="prMedia">
+                            <li class="B" *ngFor="let item of listaHardwareMedia">{{item}}</li>
+                        </ul>
+                        <ul class="prBaja">
+                            <li class="C" *ngFor="let item of listaHardwareBaja">{{item}}</li>
+                        </ul>
+                    </ul>
+                    <!-- Listas de los reportes de solicitudes de cambio de software -->
+                    <ul class="lists">
+                        Software
+                        <ul class="prAlta">
+                            <li class="A" *ngFor="let item of listaSoftwareAlta">{{item}}</li>
+                        </ul> 
+                        <ul class="prMedia">
+                            <li class="B" *ngFor="let item of listaSoftwareMedia">{{item}}</li>
+                        </ul>
+                        <ul class="prBaja">
+                            <li class="C" *ngFor="let item of listaSoftwareBaja">{{item}}</li>
+                        </ul>
+                    </ul>
+                    
+                </form>
+            </div>
+        </div>
+        
+        <footer>
+            <ul id="foot">
+                <li>+971232312</li>
+                <li>empresa@reclamos.cl</li>
+                <li>redes sociales </li>
             </ul>
-            <ul class="prBaja">
-                <li *ngFor="let item of listaGenericaBaja">{{item}}</li>
-            </ul>
-        </ul>
-<!-- Listas de los reportes de solicitudes de cambio -->
-        <ul class="lists">
-            Cambio
-            <ul class="prAlta">
-                <li *ngFor="let item of listaCambioAlta">{{item}}</li>
-            </ul> 
-            <ul class="prMedia">
-                <li *ngFor="let item of listaCambioMedia">{{item}}</li>
-            </ul>
-            <ul class="prBaja">
-                <li *ngFor="let item of listaCambioBaja">{{item}}</li>
-            </ul>
-        </ul>
-<!-- Listas de los reportes de incidentes -->
-        <ul class="lists">
-            Incidentes
-            <ul class="prAlta">
-                <li *ngFor="let item of listaIncidenteAlta">{{item}}</li>
-            </ul> 
-            <ul class="prMedia">
-                <li *ngFor="let item of listaIncidenteMedia">{{item}}</li>
-            </ul>
-            <ul class="prBaja">
-                <li *ngFor="let item of listaIncidenteBaja">{{item}}</li>
-            </ul>
-        </ul>
-<!-- Listas de los reportes de problemas -->
-        <ul class="lists">
-            Problemas
-            <ul class="prAlta">
-                <li *ngFor="let item of listaProblemaAlta">{{item}}</li>
-            </ul> 
-            <ul class="prMedia">
-                <li *ngFor="let item of listaProblemaMedia">{{item}}</li>
-            </ul>
-            <ul class="prBaja">
-                <li *ngFor="let item of listaProblemaBaja">{{item}}</li>
-            </ul>
-        </ul>
-<!-- Listas de los reportes de solicitudes de hardware -->
-        <ul class="lists">
-            Hardware
-            <ul class="prAlta">
-                <li *ngFor="let item of listaHardwareAlta">{{item}}</li>
-            </ul> 
-            <ul class="prMedia">
-                <li *ngFor="let item of listaHardwareMedia">{{item}}</li>
-            </ul>
-            <ul class="prBaja">
-                <li *ngFor="let item of listaHardwareBaja">{{item}}</li>
-            </ul>
-        </ul>
-<!-- Listas de los reportes de solicitudes de cambio de software -->
-        <ul class="lists">
-            Software
-            <ul class="prAlta">
-                <li *ngFor="let item of listaSoftwareAlta">{{item}}</li>
-            </ul> 
-            <ul class="prMedia">
-                <li *ngFor="let item of listaSoftwareMedia">{{item}}</li>
-            </ul>
-            <ul class="prBaja">
-                <li *ngFor="let item of listaSoftwareBaja">{{item}}</li>
-            </ul>
-        </ul>
-
-    </form>
-</body>
-
-<footer>
-    <ul id="foot">
-        <li>+971232312</li>
-        <li>@reclamos.cl</li>
-        <li>redes sociales</li>
-    </ul>
-</footer>
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
