--- a/src/app/registro/registro.component.html
+++ b/src/app/registro/registro.component.html
@@ -8,7 +8,7 @@
         <h1>Foro de Reclamos</h1>
     </div>
     <div class="row"></div>
-        <form class="forms" action="?" method="POST">
+        <form [formGroup]="formularioRegistro" class="forms" action="?" method="POST">
             <h2>Formulario de Registro</h2>
             <ul>
                 <li>
@@ -37,7 +37,7 @@
                 </li>
                 <li>
                     <label class="form-label" for="region">Region</label>
-                    <select id="region">
+                    <select formControlName="region" id="region">
                         <option selected value="">Seleccionar..</option>
                         <option id="1" value="AP">Arica y Parinacota</option>
                         <option id="2" value="TA">Tarapaca</option>
@@ -59,7 +59,7 @@
                 </li>
                 <li>
                     <label class="form-label" for="comuna">Comuna</label>
-                    <select>
+                    <select formControlName="comuna">
                         
                     </select>
                     <!--Select-->
@@ -70,3 +70,12 @@
             </ul>
         </form>
 </div>
+<footer>
+    <ul id="foot">
+        <li>+971232312</li>
+        <li>empresa@reclamos.cl</li>
+        <li>redes sociales </li>
+    </ul>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
