boton y ruteo a la pestaña de registro

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -29,6 +29,11 @@
                         <li>
                             <button class="btn btn-danger" type="submit">Iniciar</button>
                         </li>
+                        <li>
+                            <a [routerLink]="['/registro']" routerLinkActive="router-link-active" >
+                                <button class="btn btn-danger" type="submit">Registrarse</button>
+                            </a>
+                        </li>
                     </ul>
                 </form>
             </div>
