--- a/src/app/inicio/inicio.component.scss
+++ b/src/app/inicio/inicio.component.scss
@@ -59,3 +59,15 @@ ul.prBaja{
     display: flex;
     background-color: green;
 }
+
+div.form-floating{
+    margin-top: 10px;
+}
+
+div.row-cols-lg-auto{
+    margin-top: 10px;
+}
+
+h3{
+    font-size: 20px;
+}
