--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,8 +1,3 @@
-    <head>
-        <title>Foro de Reclamos</title>
-        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    </head>
         <div class="container">
             <div class="row">
                 <h1>Foro de Reclamos</h1>
@@ -23,12 +18,19 @@
                         </li>
                     
                         <li>
-                            <div class="g-recaptcha" data-sitekey="6LcHzwYbAAAAAEu7Fw4SBCqrpcNtasoJxutWcoeX"></div>
+                            <div id="captcha" style="display:flex; justify-content: center;">
+                                <div class="g-recaptcha" data-sitekey="6LcHzwYbAAAAAEu7Fw4SBCqrpcNtasoJxutWcoeX"></div>
+                            </div>
                         </li>
                     
                         <li>
                             <a [routerLink]="['/foro']" routerLinkActive="router-link-active" >
                                 <button class="btn btn-danger" type="submit">Iniciar</button>
+                            </a>
+                        </li>
+                        <li>
+                            <a [routerLink]="['/admin']" routerLinkActive="router-link-active" > 
+                                <button class="btn btn-danger" type="submit">Iniciar como administrador</button>
                             </a>
                         </li>
                         <li>
@@ -48,4 +50,3 @@
                 <li>empresa@reclamos.cl</li>
             </ul>
         </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
