--- a/src/app/registro/registro.component.html
+++ b/src/app/registro/registro.component.html
@@ -1,8 +1,3 @@
-<head>
-    <title>Foro de Reclamos</title>
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-</head>
 <div class="container">
     <div class="row">
         <h1>Foro de Reclamos</h1>
@@ -65,7 +60,9 @@
                     <!--Select-->
                 </li>
                 <li>
-                    <button class="btn btn-danger" type="submit">Registrarse</button>
+                    <a [routerLink]="['']" routerLinkActive="router-link-active" >
+                        <button class="btn btn-danger" type="submit">Registrarse</button>
+                    </a>
                 </li>
             </ul>
         </form>
@@ -77,5 +74,4 @@
         <li>redes sociales </li>
     </ul>
 </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
