--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -24,14 +24,9 @@
                         </li>
                     
                         <li>
-                           <button (click)="iniciarSesion()" class="btn btn-danger" type="submit">Iniciar</button>
+                           <button (click)="iniciarSesion()" class="btn btn-danger" type="submit">Iniciar Sesión</button>
                         </li>
-                          <div id="errorInfo"></div>
-                        <li>
-                            <a [routerLink]="['/admin']" routerLinkActive="router-link-active" > 
-                                <button class="btn btn-danger" type="submit">Iniciar como administrador</button>
-                            </a>
-                        </li>
+                        <div id="errorInfo"></div>
                         <li>
                             <label class="form-label" for="registrarse">Si no tiene cuenta registrese aqui:  </label>
                             <a [routerLink]="['/registro']" routerLinkActive="router-link-active" >
